Implantação de um Switcher de Fontes

--- a/about.html
+++ b/about.html
@@ -7,20 +7,24 @@
 
     <!-- ----- CSS ----- -->
     <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="/css/colors.css" />
+    <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="/css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="/css/pages/about.css" />
   </head>
 
   <!-- ----- Scripts ----- -->
+  <script src="/js/helpers.js" defer></script>
   <script src="/js/themeManager.js" defer></script>
+  <script src="/js/fontManager.js" defer></script>
+  <!-- --- Script Específico --- -->
+  <script src="/js/pages/about.js" defer></script>
 
   <body>
     <h1>Sobre o Antes do Sim</h1>
 
     <!-- --- Botão de Tema --- -->
-    <button id="button-tema"></button>
+    <button id="button-tema" aria-label="Mudar tema"></button>
   </body>
 </html>
