Criação da História Base
- História gerada por ChatGPT;
- Consertei um erro no fontManager.js que troquei PlayfairDisplay e Segoe UI.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
       <h1>Antes do Sim</h1>
     </header>
 
+    <!-- --- Seção Introdução --- -->
+    <section class="section-intro"></section>
+
+    <!-- --- Seção Primeiro Encontro --- -->
+    <section class="section-first-meeting"></section>
+
+    <!-- --- Seção Nossos Momentos --- -->
+    <section class="section-moments"></section>
+
+    <!-- --- Seção Significado --- -->
+    <section class="section-meaning"></section>
+
+    <!-- --- Seção Pedido --- -->
+    <section class="section-proposal"></section>
+
+    <!-- --- Seção Pós-Créditos --- -->
+    <section class="section-post-credits"></section>
+
     <!-- --- Botão de Tema --- -->
     <button id="button-tema" aria-label="Mudar tema"></button>
     <!-- --- Botão de Fonte --- -->
