Implementação da Top Bar

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/colors.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/components.css" />
     <link rel="stylesheet" href="/css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="/css/pages/about.css" />
@@ -18,11 +19,14 @@
   <script src="/js/helpers.js" defer></script>
   <script src="/js/themeManager.js" defer></script>
   <script src="/js/fontManager.js" defer></script>
+  <script src="/js/components.js" defer></script>
   <!-- --- Script Específico --- -->
   <script src="/js/pages/about.js" defer></script>
 
   <body>
-    <h1>Sobre o Antes do Sim</h1>
+    <header id="header-top-bar">
+      <h1>Sobre o Antes do Sim</h1>
+    </header>
 
     <!-- --- Botão de Tema --- -->
     <button id="button-tema" aria-label="Mudar tema"></button>
