--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/colors.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
+    <link rel="stylesheet" href="/css/components.css" />
     <link rel="stylesheet" href="/css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="/css/pages/index.css" />
@@ -18,11 +19,12 @@
   <script src="/js/helpers.js" defer></script>
   <script src="/js/themeManager.js" defer></script>
   <script src="/js/fontManager.js" defer></script>
+  <script src="/js/components.js" defer></script>
   <!-- --- Script Específico --- -->
   <script src="/js/pages/index.js" defer></script>
 
   <body>
-    <header>
+    <header id="header-top-bar">
       <h1>Antes do Sim</h1>
     </header>
 
