Início do HTML e dos testes de reprodução de áudio

--- a/about.html
+++ b/about.html
@@ -6,22 +6,22 @@
     <title>Sobre o Antes do Sim</title>
 
     <!-- ----- CSS ----- -->
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/colors.css" />
-    <link rel="stylesheet" href="/css/fonts.css" />
-    <link rel="stylesheet" href="/css/components.css" />
-    <link rel="stylesheet" href="/css/global.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/colors.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <!-- --- CSS Específico --- -->
-    <link rel="stylesheet" href="/css/pages/about.css" />
+    <link rel="stylesheet" href="./css/pages/about.css" />
   </head>
 
   <!-- ----- Scripts ----- -->
-  <script src="/js/helpers.js" defer></script>
-  <script src="/js/themeManager.js" defer></script>
-  <script src="/js/fontManager.js" defer></script>
-  <script src="/js/components.js" defer></script>
+  <script src="./js/helpers.js"></script>
+  <script src="./js/themeManager.js" defer></script>
+  <script src="./js/fontManager.js" defer></script>
+  <script src="./js/components.js" defer></script>
   <!-- --- Script Específico --- -->
-  <script src="/js/pages/about.js" defer></script>
+  <script src="./js/pages/about.js" defer></script>
 
   <body>
     <header id="header-top-bar">
