--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>Antes do Sim</title>
 
     <!-- ----- CSS ----- -->
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/colors.css" />
-    <link rel="stylesheet" href="/css/fonts.css" />
-    <link rel="stylesheet" href="/css/components.css" />
-    <link rel="stylesheet" href="/css/global.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/colors.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <!-- --- CSS Específico --- -->
-    <link rel="stylesheet" href="/css/pages/index.css" />
+    <link rel="stylesheet" href="./css/pages/index.css" />
   </head>
 
   <!-- ----- Scripts ----- -->
-  <script src="/js/helpers.js" defer></script>
-  <script src="/js/themeManager.js" defer></script>
-  <script src="/js/fontManager.js" defer></script>
-  <script src="/js/components.js" defer></script>
+  <script src="./js/helpers.js"></script>
+  <script src="./js/themeManager.js" defer></script>
+  <script src="./js/fontManager.js" defer></script>
+  <script src="./js/components.js" defer></script>
   <!-- --- Script Específico --- -->
-  <script src="/js/pages/index.js" defer></script>
+  <script src="./js/pages/index.js" defer></script>
 
   <body>
     <header id="header-top-bar">
@@ -29,22 +29,34 @@
     </header>
 
     <!-- --- Seção Introdução --- -->
-    <section class="section-intro"></section>
+    <section id="section-intro">
+      <h2>Ei, lembra daquele dia?</h2>
+    </section>
 
     <!-- --- Seção Primeiro Encontro --- -->
-    <section class="section-first-meeting"></section>
+    <section id="section-first-meeting">
+      <h2>Quando tudo começou</h2>
+    </section>
 
     <!-- --- Seção Nossos Momentos --- -->
-    <section class="section-moments"></section>
+    <section id="section-moments">
+      <h2>As memórias que ficaram</h2>
+    </section>
 
     <!-- --- Seção Significado --- -->
-    <section class="section-meaning"></section>
+    <section id="section-meaning">
+      <h2>Entre tudo o que vivi</h2>
+    </section>
 
     <!-- --- Seção Pedido --- -->
-    <section class="section-proposal"></section>
+    <section id="section-proposal">
+      <h2>Quer namorar comigo?</h2>
+    </section>
 
     <!-- --- Seção Pós-Créditos --- -->
-    <section class="section-post-credits"></section>
+    <section id="section-post-credits">
+      <h2>Nosso novo capítulo</h2>
+    </section>
 
     <!-- --- Botão de Tema --- -->
     <button id="button-tema" aria-label="Mudar tema"></button>
