Reprodução de Áudio Básica em tests.html

--- a/tests.html
+++ b/tests.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Antes do Sim</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 
     <!-- ----- CSS ----- -->
     <link rel="stylesheet" href="./css/reset.css" />
@@ -28,33 +29,10 @@
       <h1>Testes</h1>
     </header>
 
+    <div id="div-top-spacer"></div>
+
     <!-- --- Audio Player --- -->
-    <div id="div-audio-player">
-      <img src="./assets/media/images/vinyl-4808792_1920.jpg" alt="" />
-      <div>
-        <button id="button-back">
-          <img
-            src="./assets/icons/arrow-counterclockwise.svg"
-            alt=""
-            onload="buscarSvg(this)"
-          />
-        </button>
-        <button id="button-play-pause">
-          <img
-            src="./assets/icons/play-fill.svg"
-            alt=""
-            onload="buscarSvg(this)"
-          />
-        </button>
-        <button id="button-forward">
-          <img
-            src="./assets/icons/arrow-clockwise.svg"
-            alt=""
-            onload="buscarSvg(this)"
-          />
-        </button>
-      </div>
-    </div>
+    <div id="div-audio-player"></div>
 
     <!-- --- Botão de Tema --- -->
     <button id="button-tema" aria-label="Mudar tema"></button>
