--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Antes do Sim</title>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
 
     <!-- ----- CSS ----- -->
     <link rel="stylesheet" href="./css/reset.css" />
@@ -27,6 +28,8 @@
     <header id="header-top-bar">
       <h1>Antes do Sim</h1>
     </header>
+
+    <div id="div-top-spacer"></div>
 
     <!-- --- Seção Introdução --- -->
     <section id="section-intro">
