--- a/tests.html
+++ b/tests.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Antes do Sim</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
 
     <!-- ----- CSS ----- -->
     <link rel="stylesheet" href="./css/reset.css" />
@@ -18,25 +18,24 @@
 
   <!-- ----- Scripts ----- -->
   <script src="./js/helpers.js"></script>
-  <script src="./js/themeManager.js" defer></script>
-  <script src="./js/fontManager.js" defer></script>
+  <script src="./js/themeManager.js"></script>
+  <script src="./js/fontManager.js"></script>
   <script src="./js/components.js" defer></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/tests.js" defer></script>
 
   <body>
+    <!-- --- Componente TopBar --- -->
     <header id="header-top-bar">
       <h1>Testes</h1>
     </header>
 
     <div id="div-top-spacer"></div>
 
-    <!-- --- Audio Player --- -->
+    <!-- --- Componente AudioPlayer --- -->
     <div id="div-audio-player"></div>
 
-    <!-- --- Botão de Tema --- -->
-    <button id="button-tema" aria-label="Mudar tema"></button>
-    <!-- --- Botão de Fonte --- -->
-    <button id="button-fonte" aria-label="Mudar fonte"></button>
+    <!-- --- Componente SettingsPanel --- -->
+    <div id="div-settings-panel"></div>
   </body>
 </html>
