--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre o Antes do Sim</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
 
     <!-- ----- CSS ----- -->
     <link rel="stylesheet" href="./css/reset.css" />
@@ -18,20 +18,21 @@
 
   <!-- ----- Scripts ----- -->
   <script src="./js/helpers.js"></script>
-  <script src="./js/themeManager.js" defer></script>
-  <script src="./js/fontManager.js" defer></script>
+  <script src="./js/themeManager.js"></script>
+  <script src="./js/fontManager.js"></script>
   <script src="./js/components.js" defer></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/about.js" defer></script>
 
   <body>
+    <!-- --- Componente TopBar --- -->
     <header id="header-top-bar">
       <h1>Sobre o Antes do Sim</h1>
     </header>
 
     <div id="div-top-spacer"></div>
 
-    <!-- --- Botão de Tema --- -->
-    <button id="button-tema" aria-label="Mudar tema"></button>
+    <!-- --- Componente SettingsPanel --- -->
+    <div id="div-settings-panel"></div>
   </body>
 </html>
