Página about.html

--- a/about.html
+++ b/about.html
@@ -34,5 +34,66 @@
 
     <!-- --- Componente SettingsPanel --- -->
     <div id="div-settings-panel"></div>
+
+    <!-- ----- Conteúdo da Página ----- -->
+    <main class="about-container">
+      <!-- ----- Seção Sobre ----- -->
+      <section id="about-project" class="about-section">
+        <h2>🌷 Sobre o Projeto</h2>
+        <p>
+          <strong>Antes do Sim</strong> é um site interativo e romântico criado
+          para conduzir a pessoa amada por uma viagem de lembranças, emoções e
+          lugares especiais. Cada seção desperta memórias e sentimentos até
+          chegar ao grande momento:
+          <strong>o pedido de namoro.</strong>
+        </p>
+        <p>
+          O objetivo é simples e profundo: transformar o momento do “sim” em
+          algo inesquecível, com uma experiência digital feita com cuidado, amor
+          e criatividade. Tudo desenvolvido com
+          <strong>HTML, CSS e JavaScript</strong>, leve e sem necessidade de
+          back-end.
+        </p>
+      </section>
+
+      <!-- ----- Seção Créditos ----- -->
+      <section id="credits" class="about-section">
+        <h2>🎵 Créditos das Músicas e Sons</h2>
+        <p>
+          As trilhas sonoras e efeitos sonoros do projeto foram cuidadosamente
+          selecionados para criar a atmosfera emocional de cada seção.
+        </p>
+        <ul>
+          <li>
+            <span>Música 1</span>
+          </li>
+          <li>
+            <span>Música 2</span>
+          </li>
+          <li>
+            <span>Música 3</span>
+          </li>
+        </ul>
+      </section>
+
+      <!-- ----- Seção Agradecimentos ----- -->
+      <section id="acknowledgements" class="about-section">
+        <h2>💖 Agradecimentos</h2>
+        <p>
+          Este projeto nasceu de uma ideia incrível de um amigo:
+          <strong>Jaaziel</strong>.
+        </p>
+        <p>
+          Também agradeço às comunidades e criadores das músicas, sons e imagens
+          utilizadas, cujos conteúdos livres possibilitaram a realização do
+          projeto de forma acessível e artística.
+        </p>
+        <p>
+          Por fim, um agradecimento especial a você que está prestes a viver
+          esta experiência — que cada memória, som e imagem transforme o momento
+          do pedido em algo inesquecível.
+        </p>
+      </section>
+    </main>
   </body>
 </html>
