Atualização da Top Bar
- Modo com Responsividade para celulares e Tablets

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <body>
     <!-- --- Componente TopBar --- -->
     <header id="header-top-bar">
-      <h1>Sobre o Antes do Sim</h1>
+      <h1>Sobre o Projeto</h1>
     </header>
 
     <div id="div-top-spacer"></div>
