Carregar capas do arquivo MP3

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="./js/themeManager.js"></script>
   <script src="./js/fontManager.js"></script>
   <script src="./js/components.js" defer></script>
+  <!-- ----- Bibliotecas ----- -->
+  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/index.js" defer></script>
 
