--- a/tests.html
+++ b/tests.html
@@ -20,6 +20,7 @@
   <script src="./js/helpers.js"></script>
   <script src="./js/themeManager.js"></script>
   <script src="./js/fontManager.js"></script>
+  <script src="./js/effects.js"></script>
   <script src="./js/components.js" defer></script>
   <!-- ----- Bibliotecas ----- -->
   <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
