Implementação completa do efeito de Digitação

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/colors.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="./css/pages/index.css" />
   </head>
 
+  <!-- ----- Bibliotecas ----- -->
+  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- ----- Scripts ----- -->
   <script src="./js/helpers.js"></script>
   <script src="./js/themeManager.js"></script>
   <script src="./js/fontManager.js"></script>
   <script src="./js/effects.js"></script>
   <script src="./js/components.js" defer></script>
-  <!-- ----- Bibliotecas ----- -->
-  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/index.js" defer></script>
 
@@ -92,6 +93,8 @@
         </button>
       </div>
     </main>
+
+    <div id="div-top-spacer"></div>
 
     <!-- --- Componente SettingsPanel --- -->
     <div id="div-settings-panel"></div>
