--- a/tests.html
+++ b/tests.html
@@ -10,20 +10,21 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/colors.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="./css/pages/tests.css" />
   </head>
 
+  <!-- ----- Bibliotecas ----- -->
+  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- ----- Scripts ----- -->
   <script src="./js/helpers.js"></script>
   <script src="./js/themeManager.js"></script>
   <script src="./js/fontManager.js"></script>
   <script src="./js/effects.js"></script>
   <script src="./js/components.js" defer></script>
-  <!-- ----- Bibliotecas ----- -->
-  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/tests.js" defer></script>
 
@@ -35,8 +36,70 @@
 
     <div id="div-top-spacer"></div>
 
+    <section class="section-typing">
+      <!-- --- Efeito de Digitação --- -->
+      <div id="div-typewriter">
+        <h4 class="texto-1"></h4>
+        <h3 class="texto-2"></h3>
+        <h3 class="texto-3"></h3>
+        <h4 class="texto-4"></h4>
+        <h2 class="texto-5"></h2>
+      </div>
+    </section>
     <!-- --- Componente AudioPlayer --- -->
     <div id="div-audio-player"></div>
+
+    <!-- --- Seção de Créditos --- -->
+    <section class="section-credits">
+      <h2>Créditos</h2>
+
+      <h3>Matt Pridgyn - Second Wind</h3>
+      <p>Song: Matt Pridgyn - Second Wind</p>
+      <p>Music provided by NoCopyrightSounds</p>
+      <p>
+        Free Download/Stream:
+        <a href="http://ncs.io/SecondWind">http://ncs.io/SecondWind</a>
+      </p>
+      <p>
+        Watch:
+        <a href="http://ncs.lnk.to/SecondWindAT/youtube"
+          >http://ncs.lnk.to/SecondWindAT/youtube</a
+        >
+      </p>
+
+      <h3>More Plastic - Rewind [NCS Release]</h3>
+      <p>Song: More Plastic - Rewind [NCS Release]</p>
+      <p>Music provided by NoCopyrightSounds</p>
+      <p>
+        Free Download/Stream:
+        <a href="http://NCS.io/Rewind">http://NCS.io/Rewind</a>
+      </p>
+      <p>
+        Watch:
+        <a href="http://youtu.be/KVbrHTRxgsk">http://youtu.be/KVbrHTRxgsk</a>
+      </p>
+
+      <h3>The Flow of Time by Alex-Productions</h3>
+      <p>
+        The Flow of Time by Alex-Productions
+        <a href="https://soundcloud.com/alexproductionsmusic"
+          >https://soundcloud.com/alexproductionsmusic</a
+        >
+      </p>
+      <p>Creative Commons — Attribution 3.0 Unported — CC BY 3.0</p>
+      <p>
+        Free Download / Stream:
+        <a href="http://audiolibrary.com.co/alex-productions/the-flow-of-time"
+          >http://audiolibrary.com.co/alex-productions/the-flow-of-time</a
+        >
+      </p>
+      <p>
+        Music promoted by Audio Library
+        <a href="https://youtu.be/jqIDnltiDRI">https://youtu.be/jqIDnltiDRI</a>
+      </p>
+    </section>
+
+    <div id="div-top-spacer"></div>
 
     <!-- --- Componente SettingsPanel --- -->
     <div id="div-settings-panel"></div>
