--- a/about.html
+++ b/about.html
@@ -10,20 +10,21 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/colors.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/animations.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/global.css" />
     <!-- --- CSS Específico --- -->
     <link rel="stylesheet" href="./css/pages/about.css" />
   </head>
 
+  <!-- ----- Bibliotecas ----- -->
+  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- ----- Scripts ----- -->
   <script src="./js/helpers.js"></script>
   <script src="./js/themeManager.js"></script>
   <script src="./js/fontManager.js"></script>
   <script src="./js/effects.js"></script>
   <script src="./js/components.js" defer></script>
-  <!-- ----- Bibliotecas ----- -->
-  <script src="./libs/jsmediatags/jsmediatags.min.js"></script>
   <!-- --- Script Específico --- -->
   <script src="./js/pages/about.js" defer></script>
 
